--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -1,4 +1,4 @@
-/* -----------loginformulär--------- */
+
 .loginForm {
   position: relative;
   width: 100%;
@@ -7,13 +7,13 @@
   padding: 5em, 2.5;
   border-radius: 10px;
 }
-/* -------------h4 under inloggning------------- */
+
 .loginForm h4 {
-  display: flexbox, (); /*fixa en flexbox för positionering av logintext och bild*/
+  display: flexbox, (); 
   text-align: center;
   display: inline-block;
 }
-/* ----------loggin knapp--------- */
+
 .loginUser {
   color: rgb(255, 255, 255);
   background: #740000;
@@ -28,7 +28,7 @@
 .loginUser:focus {
   background: rgba(116, 0, 0, 0.6);
 }
-/* ------------reg knapp------------- */
+
 .registrera {
   color: rgb(255, 255, 255);
   background: #740000;
@@ -43,7 +43,7 @@
 .registrera:focus {
   background: rgba(116, 0, 0, 0.6);
 }
-/* -----------input class för loggin form ----------- */
+
 .tb {
   padding: 10px, 20px;
   font-size: 12px;
@@ -52,20 +52,20 @@
 }
 .tb:focus {
   border: 2px solid rgba(116, 0, 0, 0.8);
-  /* ----------------------------------------------------------- */
-  /* h-tag klass för h2 tag finns både i login och reg html */
+
+
 }
 .h-tag {
   left: 20%;
   display: border;
   font-size: 200%;
   color: #fff;
-  display: flex; /*fixa en flexbox för positionering av logintext och bild*/
+  display: flex; 
   text-align: center;
   display: inline-block;
   width: 100%;
 }
-/* ------------loggo bild och spinn i formulär-------------*/
+
 .fvpic {
   position: right 70%;
   width: 15%;
@@ -80,7 +80,7 @@
   }
 }
 
-/*----------------reg formulär-------------- */
+
 .regform2 {
   position: relative;
   height: 80%;
@@ -89,7 +89,7 @@
   border-radius: 10px;
   flex-grow: 1;
 }
-/* ------------input i reg form----------- */
+
 .regform2 input {
   max-width: 50vw;
   width: 100%;
@@ -108,7 +108,7 @@
 .regform2 input:focus {
   border: 2px solid rgba(116, 0, 0, 0.8);
 }
-/* -----reg from knapp------- */
+
 .btn {
   display: flexbox;
   flex-direction: row;
