--- a/www/css/seats-booking.css
+++ b/www/css/seats-booking.css
@@ -16,6 +16,8 @@
   .seatingBooking {
     zoom: 0.85;
     -moz-transform: scale(0.85);
+    -webkit-transform: scale(0.85);
+    transform: scale(0.85);
   }
 }
 
@@ -23,6 +25,8 @@
   .seatingBooking {
     zoom: 0.7;
     -moz-transform: scale(0.7);
+    -webkit-transform: scale(0.7);
+    transform: scale(0.7);
   }
 }
 
